# webring

./: README.md  pyproject.toml  schema.sql
src/webring/: __init__.py  db.py  env.py  misc.py
templates/: deregister.jinja  index.jinja  login.jinja  page.jinja  register.jinja  ring.jinja  widget.jinja
