[project]
name = "webring"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = [
    "starlette>=0.42.0",
    "psycopg[binary]>=3.2.3",
    "environs>=11.2.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.19",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["uvicorn>=0.33.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webring"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = ["ALL"]
ignore = ["D", "COM", "S101", 'ANN401']

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
